@@ -1,0 +1,14 @@
+# Created by Jevoom
+#
+# 02-Aug-2013
+#   Jeni::IO change to use $stdin.gets instead of Kernel#gets, which will automatically
+#   read from a file on the command line, not what is wanted here.
+
+module Jeni
+  # version set to 0.2.4
+  Version = '0.2.4'
+  # date set to 02-Aug-2013
+  Version_Date = '02-Aug-2013'
+  #ident string set to: jeni-0.2.4 02-Aug-2013
+  Ident = 'jeni-0.2.4 02-Aug-2013'
+end
