@@ -1,14 +1,13 @@
 # Created by Jevoom
 #
-# 02-Aug-2013
-#   Jeni::IO change to use $stdin.gets instead of Kernel#gets, which will automatically
-#   read from a file on the command line, not what is wanted here.
+# 28-Aug-2013
+#   make target_root accessible and ignore chown etc on pretend
 
 module Jeni
-  # version set to 0.2.4
-  Version = '0.2.4'
-  # date set to 02-Aug-2013
-  Version_Date = '02-Aug-2013'
-  #ident string set to: jeni-0.2.4 02-Aug-2013
-  Ident = 'jeni-0.2.4 02-Aug-2013'
+  # version set to 0.2.5
+  Version = '0.2.5'
+  # date set to 28-Aug-2013
+  Version_Date = '28-Aug-2013'
+  #ident string set to: jeni-0.2.5 28-Aug-2013
+  Ident = 'jeni-0.2.5 28-Aug-2013'
 end
