@@ -4,6 +4,10 @@
 == History
 
 
+[jeni-0.2.5 28-Aug-2013]
+
+  make target_root accessible and ignore chown etc on pretend
+
 [jeni-0.2.4 02-Aug-2013]
 
   Jeni::IO change to use $stdin.gets instead of Kernel#gets, which will automatically
